<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.PokemonStatsScreenActivity">

    <ImageView
        android:id="@+id/pokemonImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="93dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonNameLabel"
        app:srcCompat="@drawable/bulbasaur" />

    <TextView
        android:id="@+id/pokemonNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="151dp"
        android:text="@string/bulbasaur"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HPIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="306dp"
        android:text="@string/hp_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />

    <TextView
        android:id="@+id/attackIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="282dp"
        android:text="@string/attack_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HPIV" />

    <TextView
        android:id="@+id/DefenseIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="269dp"
        android:text="@string/defense_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackIV" />

    <TextView
        android:id="@+id/SpecialAttackIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="226dp"
        android:text="@string/special_attack_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DefenseIV" />

    <TextView
        android:id="@+id/SpecialDefenseIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="214dp"
        android:text="@string/special_defense_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpecialAttackIV" />

    <TextView
        android:id="@+id/SpeedIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="283dp"
        android:text="@string/speed_iv"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpecialDefenseIV" />

    <TextView
        android:id="@+id/EggGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="273dp"
        android:text="@string/egg_group"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpeedIV" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="10dp"
        android:text="@string/value"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EggGroup" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:onClick="onBackButtonPressed"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/value" />

    <Button
        android:id="@+id/itemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:onClick="onGiveItemButtonPressed"
        android:text="@string/heldItem"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toBottomOf="@id/value" />

    <Button
        android:id="@+id/sellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:onClick="onSellButtonPressed"
        android:text="@string/sell"
        app:layout_constraintStart_toEndOf="@id/itemButton"
        app:layout_constraintTop_toBottomOf="@id/valueStat" />

    <TextView
        android:id="@+id/HPIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="115dp"
        android:text="@string/hp_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemonImage" />

    <TextView
        android:id="@+id/attackIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/atk_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HPIVStat" />

    <TextView
        android:id="@+id/defenseIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/def_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackIVStat" />

    <TextView
        android:id="@+id/specialAttackIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/spatk_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defenseIVStat" />

    <TextView
        android:id="@+id/specialDefenseIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/spdef_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialAttackIVStat" />

    <TextView
        android:id="@+id/speedIVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/spd_iv_stat"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialDefenseIVStat" />

    <TextView
        android:id="@+id/eggGroupStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/egg_group_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedIVStat" />

    <TextView
        android:id="@+id/valueStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="115dp"
        android:text="@string/egg_group_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eggGroupStat" />
</androidx.constraintlayout.widget.ConstraintLayout>